# lan-messenger

./: .gitignore  README.md
.harness/: acceptance-criteria.md  flow-state.json  progress.md
.harness/nodes/code-review/: handshake.json
.harness/nodes/gate/: handshake.json
.harness/nodes/test-design/: handshake.json
.harness/nodes/test-execute/: handshake.json
docs/: BUILD.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  App.vue  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  device.rs  lib.rs  net.rs
frontend/src-tauri/src/discovery/: mod.rs  udp.rs
frontend/src-tauri/src/file_transfer/: mod.rs  service.rs
frontend/src-tauri/src/messenger/: mod.rs  service.rs
frontend/src-tauri/src/protocol/: codec.rs  mod.rs  types.rs
frontend/src-tauri/src/storage/: db.rs  mod.rs  schema.sql
frontend/src/api/: contacts.ts  device.ts  discovery.ts  fileTransfer.ts  index.ts  messages.ts
frontend/src/discovery/: index.ts  mock.ts  types.ts
frontend/src/hooks/: useDeviceInfo.ts  useEvent.ts
frontend/src/ipc/: index.ts
frontend/src/lib/: displayMessage.ts  fileTint.ts  format.ts  peer.ts
frontend/src/protocol/: codec.ts  index.ts  types.ts
frontend/src/storage/: index.ts  memory.ts  repository.ts  types.ts
frontend/src/stores/: app.ts  contacts.ts  messages.ts  transfers.ts  ui.ts
frontend/src/types/: index.ts
scripts/: build.sh
(+60 files in other folders)
