[package]
name = "lan-messenger"
version = "0.1.0"
description = "LAN Messenger - Local network messaging app"
authors = ["Jiayiyan-OPC"]
license = "MIT"
repository = "https://github.com/Jiayiyan-OPC/lan-messenger"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["unstable", "macos-private-api"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rmp-serde = "1"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
anyhow = "1"
serde_bytes = "0.11"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
